Add a vew-petitions html with underlying Java classes to create and display the petitions

--- a/src/main/resources/templates/create-petition.html
+++ b/src/main/resources/templates/create-petition.html
@@ -17,7 +17,7 @@
     <br>
     <div class="col-md-12">
 
-
+        <form action="/add-petition" method="POST">
 
             <div class="shadow p-3 mb-4 bg-white rounded">
                 <div class="col-sm-12">
@@ -40,7 +40,7 @@
                     </div>
                 </div>
             </div>
-
+        </form>
 
     </div>
 </div>
