--- a/src/main/resources/templates/sign-petition.html
+++ b/src/main/resources/templates/sign-petition.html
@@ -10,7 +10,33 @@
 
 
 <body style="background-color: papayawhip">
+<nav class="navbar navbar-expand-md navbar-light bg-light">
+    <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+            <li class="nav-item active">
+                <form action="/">
+                    <button type="submit" class = "btn nav-link">Create Petitions</button>
+                </form>
+            </li>
+            </li>
+            <li class="nav-item">
+                <form action="/search-petitions">
+                    <button type="submit" class = "btn nav-link">Search Petitions</button>
+                </form>
+            </li>
 
+        </ul>
+    </div>
+    <div class="mx-auto order-0">
+        <a class="navbar-brand mx-auto" href="#">Online Petitions</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+    </div>
+    <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
+    </div>
+</nav>
 <div class="container">
     <br>
     <br>
