--- a/src/main/resources/templates/search-result-petition.html
+++ b/src/main/resources/templates/search-result-petition.html
@@ -11,6 +11,7 @@
 
 <body style="background-color: papayawhip">
 
+
 <nav class="navbar navbar-expand-md navbar-light bg-light">
     <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
         <ul class="navbar-nav mr-auto">
@@ -20,6 +21,11 @@
                     <button type="submit" class = "btn nav-link">Create Petitions</button>
                 </form>
             </li>
+            </li>
+            <li class="nav-item">
+                <form action="/petitions">
+                    <button type="submit" class = "btn nav-link">View Petitions</button>
+                </form>
             </li>
             <li class="nav-item">
                 <form action="/search-petitions">
