Updated signatures petition html to display names in a table

--- a/src/main/resources/templates/sign-petition.html
+++ b/src/main/resources/templates/sign-petition.html
@@ -57,8 +57,8 @@
             <form action="/Signature" >
                 <input type="hidden"  name="id" th:value="${param.id}"></input>
 
-                Name : <input type="text" name="email"  class="Required" />
-                E-Mail : <input type="text" name="name"  class="Required"/>
+                Name : <input type="text" name="name"  class="Required" />
+                E-Mail : <input type="text" name="email"  class="Required"/>
 
                 <input type="submit" value="Sign">
             </form>
