Updates to the create and search petiton htmls

--- a/src/main/resources/templates/search-petition.html
+++ b/src/main/resources/templates/search-petition.html
@@ -57,7 +57,7 @@
             <form th:action="@{/search-result-petition}" class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" name="search" placeholder="Search" aria-label="Search">
                 <br>
-                <input type="submit" value="Search Petition">
+                <input type="submit" value="Search">
             </form>
 
         </div>
