Updates to the create and search petiton html

--- a/src/main/resources/templates/create-petition.html
+++ b/src/main/resources/templates/create-petition.html
@@ -68,7 +68,7 @@
                         <br>
 
                         <form >
-                            <input type="submit" value="Create">
+                            <input type="submit" value="Create Petition">
                         </form>
 
                     </div>
